# Xtra-Kernel-Manager

./: .gitignore  CHANGELOGS.md  LICENSE  PRIVACY.md  README.md  TERMS.md  build-debug-rust.bat  build-debug-rust.sh  build-release-rust.bat  build-release-with-changelog.bat  build-release.bat  build-release.bat.template  build.gradle.kts  build_debug.bat  build_debug.sh  build_with_rust.bat  build_with_rust.sh  changelogs.txt  clean_build_release.sh  debug_overlay.sh  exampletuning-board-brand-model.toml  gradle.properties.template  index.html  local.properties.template  logcat_command.sh  settings.gradle.kts  telegram_helper.ps1  test-telegram.bat
.github/: SETUP_SECRETS.md  dependabot.yml
.github/workflows/: android.yml  build-and-release.yml  build-debug.yml
app/: .gitignore  build.gradle.kts  proguard-rules.pro
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: app_metadata.json
app/src/main/res/drawable/: logo_a.xml  (+11 more)
app/src/main/rust/xkm_native/: .gitignore  Cargo.toml  README.md
app/src/main/rust/xkm_native/.cargo/: config.toml
app/src/main/rust/xkm_native/src/: cpu.rs  gpu.rs  lib.rs  utils.rs
app/src/main/rust/xkm_native/src/cpu/: cpu.rs  mod.rs
app/src/main/rust/xkm_native/src/disk/: disk.rs
app/src/main/rust/xkm_native/src/gpu/: gpu.rs
app/src/main/rust/xkm_native/src/memory/: memory.rs  mod.rs
app/src/main/rust/xkm_native/src/power/: mod.rs  power.rs  thermal.rs
app/src/main/rust/xkm_native/tests/: android_runner.rs
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+501 files in other folders)
