[package]
name = "xkm_native"
version = "1.0.0"
edition = "2024"
description = "Native library for Xtra Kernel Manager"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"

[profile.release]
lto = true
opt-level = "z"
strip = true
panic = "abort"
